change the map display. fixed the collapsing of the buttons on the main page.

--- a/src/templates/custom.css
+++ b/src/templates/custom.css
@@ -23,7 +23,13 @@ display: none;
 text-align: center;
 }
 
-#map_canvas {  
-        width: 800px;  
-        height: 600px;  
-}  
+#map_canvas {
+    display:block;
+    position:absolute;
+    height:auto;
+    bottom:0;
+    top:0;
+    left:0;
+    right:0;
+    margin-top:50px;/
+}
